--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dependencies/i3blocks"]
 	path = dependencies/i3blocks
 	url = https://github.com/vivien/i3blocks.git
+[submodule "dependencies/rtags"]
+	path = dependencies/rtags
+	url = https://github.com/Andersbakken/rtags.git
