--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,6 @@
 [alias]
 	hist = log --date-order --graph --pretty=format:'%Cred%h%Creset - %C(green)%ad%Creset%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short
+	hh = log --date-order --pretty=format:'%Cred%h%Creset - %C(green)%ad%Creset%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short -n 5
 	st = status
 	su = submodule update
 [user]
