--- a/sway/config
+++ b/sway/config
@@ -209,9 +209,9 @@ bindsym XF86KbdBrightnessDown exec xbacklight -ctrl asus::kbd_backlight -dec 30
 
 ## Screenshots
 # Take a Screenshot
-bindsym Print                          exec swaygrab "~/Screenshots/$(date '+%d_%m_%Y__%H_%M_%S').png"
+bindsym Print                          exec swaygrab "~/Screenshots/$(date '+%Y_%m_%d__%H_%M_%S').png"
 # Same binding but for external keyboard
-bindsym XF86Favorites                  exec swaygrab "~/Screenshots/$(date '+%d_%m_%Y__%H_%M_%S').png"
+bindsym XF86Favorites                  exec swaygrab "~/Screenshots/$(date '+%Y_%m_%d__%H_%M_%S').png"
 
 
 ### Borders
