--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,6 +9,6 @@
 [push]
 	default = simple
 [gui]
-	fontui = -family \"DejaVu Sans\" -size 10 -weight normal -slant roman -underline 0 -overstrike 0
-	fontdiff = -family \"DejaVu Sans Mono\" -size 10 -weight normal -slant roman -underline 0 -overstrike 0
+	fontui = -family \"DejaVu Sans\" -size 12 -weight normal -slant roman -underline 0 -overstrike 0
+	fontdiff = -family \"Fira Mono\" -size 12 -weight normal -slant roman -underline 0 -overstrike 0
 	tabsize = 4
