--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,7 @@ set -g default-terminal "xterm-256color"
 set -g history-limit 1000000
 
 set -g mouse on
+setw -g aggressive-resize on
 
 set -g mode-keys vi
 
@@ -17,4 +18,4 @@ bind-key -T copy-mode-vi C-v send -X rectangle-toggle
 bind-key l next-window
 bind-key h previous-window
 
-source-file "${HOME}/.tmux-themepack/powerline/default/red.tmuxtheme"
+source-file "${HOME}/.tmux/theme"
